--- a/Aboutus.css
+++ b/Aboutus.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: url("/TASK 1/img/aboutus.jpg");
+    background: url("./img/aboutus.jpg");
     background-size: cover;
 }
 .about {
