--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body{
     width: 100%;
     height: 100vh;
-    background:  linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.2)), url('/TASK 1/img/argi.jpg');
+    background:  linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.2)), url('./img/argi.jpg');
     background-size: cover;
     font-family: sans-serif;
 }
